--- a/nutri_system/requirements.txt
+++ b/nutri_system/requirements.txt
@@ -1,2 +1,6 @@
-runtime.txt
-python-3.11.9
+Django==5.0.1
+python-docx==1.1.0
+reportlab==4.2.0
+Pillow==10.4.0
+gunicorn==21.2.0
+whitenoise==6.6.0
