--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django==5.0.1
 python-docx==1.1.0
-reportlab==4.0.9
-Pillow==10.2.0
 openpyxl==3.1.2
 pandas==2.2.0
-gunicorn==20.1.0
 runtime.txt
 python-3.11.9
+reportlab==4.2.0
+Pillow==10.4.0
+gunicorn==21.2.0
+whitenoise==6.6.0
