--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 Django==5.0.1
 python-docx==1.1.0
-openpyxl==3.1.2
-pandas==2.2.0
-runtime.txt
-python-3.11.9
 reportlab==4.2.0
 Pillow==10.4.0
 gunicorn==21.2.0
 whitenoise==6.6.0
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
