--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,11 @@ services:
   - type: web
     name: nutrisys
     runtime: python
+    pythonVersion: 3.11.9
     buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
     startCommand: gunicorn nutri_system.wsgi --log-file -
     envVars:
       - key: DEBUG
         value: False
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11.9
